...
    <string name="adding_expense">Ausgabe</string>
    <string name="adding_income">Einnahme</string>
    <string name="adding_amount">Betrag (€)</string>
    <string name="adding_date">Datum</string>
    <string name="adding_category">Kategorie</string>
    <string name="adding_address">Straße</string>
    <string name="error_message_password_field_empty">Passwortfeld ist leer</string>
    <string name="error_message_email_field">Emailfeld ist leer</string>
    <string name="error_message_store_field">Gib bitte ein Geschäft an</string>
    <string name="error_message_source_field">Gib bitte eine Quelle an</string>
    <string name="error_message_price_field">Gib bitte einen Betrag an</string>
    <string name="error_message_amount_field">Gib bitte eine Anzahl an</string>
    <string name="error_message_name_field">Gib bitte einen Namen an</string>
    <string name="error_message_date_field">Gib ein bitte Datum an</string>
...
    <string name="invalid_input_error">Ungültige Angaben gemacht!</string>
    <string name="missing_token_error">Authentifizierungsfehler</string>
    <string name="already_registered_question">Bereits registriert?</string>
    <string name="click_here_for_login">Klicke hier zum einloggen!</string>
    <string name="no_account_yet_question">Noch kein Konto?</string>
    <string name="click_here_to_register">Jetzt registrieren!</string>
    <string name="login_button">Login</string>
    <string name="login_text">Melde dich mit deinem Konto an</string>
    <string name="login_title">Anmelden</string>
    <string name="login_currently_unavailable">Login zur Zeit nicht möglich</string>
    <string name="error_message_invalid_credentials">Ungültige Angaben</string>
    <string name="error_message_server_error">Server Fehler</string>
    <string name="error_message_unknown_error_occurred">Ein unbekannter Fehler ist aufgetreten</string>
...
