...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        style="@style/Widget.Material3.FloatingActionButton.Primary"
        android:backgroundTint="@color/seed"
        app:tint="@color/cardview_light_background"
        android:layout_marginEnd="24dp"
...
